# PEA_2

PEA_2/: CMakeLists.txt  main.cpp
PEA_2/PEA_1/Algorithms/BranchAndBound/: BranchAndBound_Implementation.cpp  BranchAndBound_Implementation.h
PEA_2/PEA_1/Algorithms/BruteForce/: BruteForce_Implementation.cpp  BruteForce_Implementation.h
PEA_2/PEA_1/Algorithms/DynamicProgramming/: DynamicProgramming_implementation.cpp  DynamicProgramming_implementation.h
PEA_2/PEA_1/Utils/CityMatrix/: Matrix.cpp  Matrix.h
PEA_2/PEA_1/Utils/Presentation/: Menu.cpp  Menu.h
PEA_2/PEA_1/Utils/RandomGenerator/: Generator.cpp  Generator.h
PEA_2/PEA_1/Utils/Reader/: FileReader.cpp  FileReader.h
PEA_2/PEA_1/Utils/Timer/: TimeCounter.cpp  TimeCounter.h
PEA_2/PEA_1/data/: answer10.txt  answer11.txt  answer12.txt  answer13.txt  answer14.txt  answer15.txt  answer6.txt  answer7.txt  answer8.txt  answer9.txt  file.txt
PEA_2/PEA_2/Algorithms/SimulatedAnnealing/: SimulatedAnnealing.cpp  SimulatedAnnealing.h
PEA_2/PEA_2/Algorithms/TabuSearch/: TabuSearchImplementation.cpp  TabuSearchImplementation.h
PEA_2/PEA_2/Utils/CityMatrix/: AdjacencyMatrix.cpp  AdjacencyMatrix.h
PEA_2/PEA_2/Utils/Presentation/: Menu.cpp  Menu.h
PEA_2/PEA_2/Utils/Reader/: FileReader.cpp  FileReader.h
PEA_2/PEA_2/Utils/Timer/: TimeCounter.cpp  TimeCounter.h
PEA_2/PEA_2/data/: bestTime.txt  daneDotestów  periodic_save.txt  sa1_1.txt  sa1_2.txt  sa1_3.txt  sa2_1.txt  sa2_2.txt  sa2_3.txt  sa3_1.txt  sa3_2.txt  sa3_3.txt  sciezki.txt  tabuSave.txt  tb1_1.txt  tb1_2.txt  tb1_3.txt  tb2_1.txt  tb2_2.txt  tb2_3.txt  tb3_1.txt  tb3_2.txt  tb3_3.txt
